# eggplant-sdk-py

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SWEEP.md
eggplant_sdk/: __init__.py  _rpc.py  approval.py  auth.py  book.py  chain.py  convert.py  data.py  errors.py  fee.py  gamma.py  redeem.py  relayer.py  signer.py  sweep.py
eggplant_sdk/clob/: __init__.py  books.py  poster.py  signing.py  tick.py  types.py
eggplant_sdk/ws/: __init__.py  frames.py  market.py  user.py  util.py
examples/: approvals_bootstrap.py  convert_merge_split.py  positions.py  quickstart.py  redeem.py  stream_order_books.py  stream_user_fills.py  sweep.py
tests/: test_auth.py  test_book.py  test_books.py  test_chain.py  test_convert.py  test_fee.py  test_gamma_data.py  test_live.py  test_poster.py  test_redeem.py  test_relayer.py  test_signing.py  test_sweep.py  test_tick.py  test_types.py  test_ws.py
