[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eggplant-sdk"
version = "0.3.1"
description = "A Python SDK for Polymarket: CLOB trading with all signature types, relayer operations (merge/split/convert/redeem), order-book streams, Gamma and Data APIs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["polymarket", "prediction-markets", "clob", "trading", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "eth-account>=0.11",
    "eth-abi>=5",
    "eth-keys>=0.5",
    "eth-utils>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/promethean-quantitative/eggplant-sdk-py"

[tool.hatch.build.targets.wheel]
packages = ["eggplant_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "SIM108",  # ternary is not always clearer
    "RUF002",  # docstrings deliberately use ×/−/‖ in venue math
    "RUF003",  # comments too
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"] # long venue-shaped JSON fixtures
